# cast_control

./: .gitignore  LICENSE  MANIFEST.in  README.md  adapter.py  base.py  chromecast_mpris.desktop  listeners.py  main.py  mpris_server  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/: FUNDING.yml
.github/workflows/: build.yml
cast_control/: __init__.py  __main__.py  adapter.py  base.py  cli.py  command.py  daemon.py  device.py  listeners.py  protocols.py  run.py  state.py  types.py  wrapper.py
cast_control/app/: cli.py  completion.py  daemon.py  run.py  state.py
cast_control/assets/icon/: authors.yml  licenses.yml
cast_control/device/: base.py  device.py  listeners.py  protocols.py  wrapper.py
chromecast_mpris/: adapter.py  base.py  command.py  listeners.py  main.py  run.py  wrapper.py
chromecast_mpris/assets/: chromecast_mpris.desktop
chromecast_mpris/assets/icon/: authors.yml
src/cast_control/: __init__.py  adapter.py  base.py
src/cast_control/app/: cli.py  state.py
src/cast_control/assets/icon/: authors.yml
src/cast_control/device/: base.py  wrapper.py
