[tool]
[tool.poetry]
name = "cast_control"
version = "0.10.8"
description = "📺 Control Chromecasts from Linux and D-Bus"
license = "AGPL-3.0"
homepage = "https://github.com/alexdelorenzo/cast_control"
authors = ["Alex DeLorenzo"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.7"
appdirs = "==1.4.4"
aiopath = ">=0.5.6"
click = "==8.0.1"
daemons = "==1.3.2"
# mpris-server = "==0.3.0"
mpris-server = "==0.2.18"
pychromecast = "==9.2.0"
pydbus = ">=0.6.0"
pygobject = ">=3.34.0"
typing-extensions = {version = ">=3.10.0.0", python = "<3.10"}
