[project]
name = "cast_control"
version = "0.16.0"
description = "📺 Control Chromecasts from the Linux desktop and console"
authors = [{ name = "Alex DeLorenzo", email = "projects@alexdelorenzo.dev" }]
license = { text = "AGPL-3.0" }
readme = "README.md"
homepage = "https://cast.firstbyte.dev"
requires-python = ">=3.12"

dependencies = [
  "aiopath>=0.7.6 ; python_version >= '3.12'",
  "app_paths>=0.0.8, <0.1.0",
  "appdirs>=1.4.4, <1.5.0",
  "click>=8.1.7, <9.0.0",
  "daemons>=1.3.2, <1.4.0",
  "iteration_utilities>=0.12.0, <0.13.0",
  "mpris_server>=0.9.0, <=0.10.0",
  "PyChromecast>=14.0.2, <15.0.0",
  "pydbus>=0.6.0, <0.7.0",
  "PyGObject>=3.34.0",
  "rich>=13.6.0, <14.0.0",
  "validators>=0.22.0, <0.23.0",
]

[project.urls]
Homepage = "https://cast.firstbyte.dev"
Source = "https://github.com/alexdelorenzo/cast_control"

[project.scripts]
cast_control = "cast_control.app.cli:cli"
castctl = "cast_control.app.cli:cli"

[tool.rye]
managed = true
dev-dependencies = []

[tool.rye.scripts]
console_scripts = [
  "cast_control = cast_control.app.cli:cli",
  "castctl = cast_control.app.cli:cli"
]

[tool.rye.package-data]
cast_control = [
  "assets/*.desktop",
  "assets/icon/cc-*.svg",
  "assets/icon/*.yml"
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/cast_control"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
