[metadata]
# name = attr: cast_control.NAME
# description = attr: cast_control.DESCRIPTION
# license = attr: cast_control.__license__
  version = attr: cast_control.__version__
  license_file = LICENSE
  long_description = file: README.md
  long_description_content_type = text/markdown
  classifiers =
      Programming Language :: Python :: 3.10
      Programming Language :: Python :: 3.11
      Programming Language :: Python :: 3.12

[options]
  zip_safe = True
  include_package_data = True
  url = attr: cast_control.HOMEPAGE
# project_urls = attr: cast_control.PROJECT_URLS
# entry_points = attr: cast_control.ENTRY_POINTS
# packages = cast_control
# install_requires = file: requirements.txt
# package_data = attr: cast_control.PKG_DATA
